static/scss/_richtext.scss
/* ... */
.login-container, .modal-dialog {
    .ProsemirrorEditor.fullscreen {
        width: 100%;
        height: 100%;
    }
}

/**
 * Menu defaults
 */
.ProsemirrorEditor {
    .ProseMirror {
        padding-right: 12px;

        &.form-control {
            font-size: inherit;
        }
    }

    .ProseMirror-menu {
        margin: 0 -4px;
        line-height: 1;
    }

    .ProseMirror-tooltip .ProseMirror-menu {
        width: fit-content;
        white-space: pre;
    }

    .ProseMirror-menuitem {
        display: flex;
        margin-right: 0;
    }

    .ProseMirror-menuseparator {
        border-right: 1px solid var(--hh-background3);
        margin-right: 1px;
    }

    .ProseMirror-menubar-wrapper {
        z-index: 200;
    }

    .ProseMirror-menu-group {
        display: flex;
        flex-wrap: wrap;
        min-height: 22px;
    }

    .ProseMirror-menuitem {
        .ProseMirror-menu-group {
            border-right: 1px solid var(--hh-background3);
        }

        .ProseMirror-menu-group.last {
            border-right: none;
        }

        .ProseMirror-icon {
            background: transparent;
        }

        .seperator {
            border-right: 1px solid var(--hh-background3);
            border-radius: 0;
        }
    }

    .ProseMirror-menu-dropdown, .ProseMirror-menu-dropdown-menu {
        white-space: nowrap;
        @include media-breakpoint-down(sm) {
            white-space: normal !important;
        }
        @include media-breakpoint-down(md) {
            small {
                white-space: normal;
            }
        }
    }

    .ProseMirror-menu-dropdown {
        cursor: pointer;
        position: relative;
        padding-right: 14px !important;
    }

    .ProseMirror-menu-dropdown-wrap {
        padding: 0;
        display: inline-block;
        position: relative;
    }

    .ProseMirror-menu-dropdown:after {
        content: "";
        border-left: 4px solid transparent;
        border-right: 4px solid transparent;
        border-top: 4px solid currentColor;
        opacity: .6;
        position: absolute;
        right: 4px;
        top: calc(50% - 2px);
    }

    .ProseMirror-menu-dropdown-menu, .ProseMirror-menu-submenu {
        background: var(--hh-background-color-main);
        border: 1px solid var(--hh-text-color-soft2);
        border-bottom-left-radius: 4px;
        border-bottom-right-radius: 4px;
        color: var(--hh-text-color-highlight);
        position: absolute;

        .ProseMirror-menu-active {
            background: var(--hh-background-color-secondary);
            border-left: 2px solid var(--bs-info);
            opacity: 1 !important;
            padding: 4px 7px 4px 5px;
        }
    }

    .ProseMirror-menu-dropdown-menu {
        margin-top: 2px;
        min-width: 6em;
        z-index: 15;
    }

    .ProseMirror-menu-dropdown-item {
        cursor: pointer;
    }

    .ProseMirror-menu-dropdown-item div[title],
    .ProseMirror-menu-dropdown-item a.ProseMirror-menu-trigger,
    .ProseMirror-menu-submenu-wrap {
        display: block;
        padding: 4px 7px;
    }

    .ProseMirror-menu-dropdown-item:hover {
        background: var(--hh-background-color-secondary);
    }

    .ProseMirror-menu-submenu-wrap {
        position: relative;
    }

    .ProseMirror-menu-submenu-label:after {
        border-top: 4px solid transparent;
        border-bottom: 4px solid transparent;
        border-left: 4px solid currentColor;
        content: "";
        opacity: .6;
        position: absolute;
        right: 4px;
        top: calc(50% - 4px);
    }

    .ProseMirror-menu-submenu {
        background: var(--hh-background-color-main);
        border-top-right-radius: 4px;
        display: none;
        min-width: 4em;
        left: 100%;
        top: 0;
    }

    .ProseMirror-menu-disabled {
        opacity: .5;
    }

    .ProseMirror-menu-submenu-wrap:hover .ProseMirror-menu-submenu,
    .ProseMirror-menu-submenu-wrap-active .ProseMirror-menu-submenu {
        display: block;
    }

    .ProseMirror-icon {
        border: 1px solid transparent;
        border-radius: 4px;
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;
        min-width: 28px;
        padding: 0 5px;

        &.ProseMirror-menu-active {
            border-color: var(--hh-text-color-soft3);
        }

        &.ProseMirror-menu-tableOption,
        &.ProseMirror-menu-insertEmoji {
            svg {
                padding-top: 1px;
                padding-left: 1px;
            }
        }
    }

    .ProseMirror-menu-disabled.ProseMirror-icon {
        cursor: default;
    }

    .ProseMirror-icon svg {
        fill: currentColor;
        height: 20px;
    }

    .ProseMirror-icon span {
        vertical-align: text-top;
    }

    .ProseMirror-editor-source {
        border: 2px solid var(--hh-background-color-page);
        border-radius: 0 4px 4px 4px;
        box-sizing: border-box;
        display: block;
        min-height: 36px;
        resize: none;
        overflow: auto;
        outline: none;
        padding: 7px 12px;
        width: 100%;
    }

    .ProseMirror-editor-source:focus {
        border: 2px solid var(--bs-info);
    }
}
/* ... */

